--- a/css/profile.css
+++ b/css/profile.css
@@ -987,7 +987,7 @@
 .profile-highlighted-game-container-small .profile-highlighted-game-quote .profile-highlighted-game-tier-container .profile-highlighted-game-tier{
     font-size: 1.2em;
     width: 40px;
-    margin-top: 3px;
+    margin-top: 4px;
 }
 
 .profile-highlighted-game-container .profile-highlighted-game-quote .profile-highlighted-game-tier-container .profile-highlighted-game-tier{
